# cmake_test

./: .travis.yml  CMakeLists.txt  imgtree.cc  lineblur.cc  main.cc  main_old.cc  paddedop.cc  slowop.cc
windows/: dep-install.sh  package-w32.sh  package-w64.sh  package.sh  vipstest-build.sh
